--- a/src1/components/LeftMenu/menu.css
+++ b/src1/components/LeftMenu/menu.css
@@ -1,5 +1,6 @@
 .main-menu {
-  width: 300px;
+  -ms-flex-preferred-size: 300px;
+      flex-basis: 300px;
   -webkit-box-flex: 0;
       -ms-flex-positive: 0;
           flex-grow: 0;
@@ -13,10 +14,6 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  position: fixed;
-  flex-grow: 0;
-  height: 100%;
-  background-color: #fff;
 }
 
 .main-menu .header {
@@ -114,7 +111,8 @@
 
 @media (max-width: 992px) {
   .main-menu {
-    width: 75px;
+    -ms-flex-preferred-size: 75px;
+        flex-basis: 75px;
   }
   .main-menu .header {
     padding: 0;
