--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body,html,#root,.container-page{
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  margin-left: 300px;
+  overflow: hidden;
 }
 .page{
   flex-grow: 1;
