--- a/src/Driver/driver.scss
+++ b/src/Driver/driver.scss
@@ -1,7 +1,7 @@
 .table-page{
     background-color: #fff;
     padding: 0 30px ;
-    border-radius: 15px;
+    border-radius: 5px;
     display: flex;
     flex-direction: column;
     font-size: 13px;
@@ -12,11 +12,11 @@
         display: flex;
         justify-content: space-between;
         padding: 30px 0px;
-
+        align-content: center;
         input{
             width: 250px;
             height: 31px;
-            border-radius: 9px;
+            border-radius: 5px;
             border: 1px solid;
             outline: none;
             padding: 0 10px;
@@ -47,10 +47,10 @@
                     background-color: #f2f4f8;
                     border-top: 0;
                     &:first-child{
-                        border-top-left-radius: 10px;
+                        border-top-left-radius: 5px;
                     }
                     &:last-child{
-                        border-top-right-radius: 10px;
+                        border-top-right-radius: 5px;
                     }
                    
                 }
@@ -111,6 +111,28 @@
         .page-link{
             color:  rgba(0,0,0,.65);
             border-radius: 5px;
+        }
+    }
+}
+@media  (max-width:992px) {
+    .table-page{
+         .container-header-table {
+            input{
+                width: 180px;
+            }
+
+        }
+    }
+    .pagination{      
+        margin-top: 20px;  
+        .page-item{
+            margin: 2px;
+        
+           
+            .page-link{
+                
+                padding: 6px;
+            }
         }
     }
 }
