--- a/src/components/LeftMenu/menu.css
+++ b/src/components/LeftMenu/menu.css
@@ -1,5 +1,6 @@
 .main-menu {
-  width: 300px;
+  -ms-flex-preferred-size: 270px;
+      flex-basis: 270px;
   -webkit-box-flex: 0;
       -ms-flex-positive: 0;
           flex-grow: 0;
@@ -13,10 +14,12 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  position: fixed;
   flex-grow: 0;
   height: 100%;
   background-color: #fff;
+  z-index: 1;
+  -webkit-box-shadow: 0 0 200px -20px rgba(57, 55, 73, 0.4);
+          box-shadow: 0 0 200px -20px rgba(57, 55, 73, 0.4);
 }
 
 .main-menu .header {
@@ -34,6 +37,10 @@
 .main-menu .header .logo img {
   max-width: 100%;
   max-height: 100%;
+}
+
+.main-menu .header .logo .mobile {
+  display: none;
 }
 
 .main-menu .menu-items {
@@ -112,9 +119,93 @@
   width: 100%;
 }
 
+.main-menu .footer {
+  background: #e4e9f0;
+  -ms-flex-preferred-size: 60px;
+      flex-basis: 60px;
+  overflow: hidden;
+  font-size: 22px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  cursor: pointer;
+}
+
+.main-menu .footer .close-menu {
+  display: none;
+}
+
+.main-menu.active {
+  -ms-flex-preferred-size: 75px;
+      flex-basis: 75px;
+}
+
+.main-menu.active .header {
+  padding: 0;
+}
+
+.main-menu.active .header .logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.main-menu.active .header .logo img {
+  max-width: 75px;
+  width: 45px;
+}
+
+.main-menu.active .header .logo .mobile {
+  display: block;
+}
+
+.main-menu.active .header .logo .computer {
+  display: none;
+}
+
+.main-menu.active .menu-items .item {
+  position: relative;
+  padding: 17px 25px;
+}
+
+.main-menu.active .menu-items .item .icon i {
+  font-size: 13px;
+}
+
+.main-menu.active .menu-items .item .icon i.arrow {
+  right: 3px;
+  position: absolute;
+  font-size: 15px;
+}
+
+.main-menu.active .menu-items .item .text {
+  display: none;
+}
+
+.main-menu.active .footer .close-menu {
+  display: block;
+}
+
+.main-menu.active .footer .open-menu {
+  display: none;
+}
+
 @media (max-width: 992px) {
   .main-menu {
-    width: 75px;
+    -ms-flex-preferred-size: 75px;
+        flex-basis: 75px;
   }
   .main-menu .header {
     padding: 0;
@@ -126,13 +217,23 @@
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .main-menu .header .logo img {
     max-width: 75px;
-    width: 75px;
+    width: 45px;
+  }
+  .main-menu .header .logo .mobile {
+    display: block;
+  }
+  .main-menu .header .logo .computer {
+    display: none;
   }
   .main-menu .menu-items .item {
     position: relative;
+    padding: 17px 25px;
   }
   .main-menu .menu-items .item .icon i {
     font-size: 17px;
@@ -140,10 +241,59 @@
   .main-menu .menu-items .item .icon i.arrow {
     right: 3px;
     position: absolute;
-    font-size: 15px;
+    font-size: 12px;
   }
   .main-menu .menu-items .item .text {
     display: none;
+  }
+  .main-menu .footer .close-menu {
+    display: block;
+  }
+  .main-menu .footer .open-menu {
+    display: none;
+  }
+  .main-menu.active {
+    -ms-flex-preferred-size: 300px;
+        flex-basis: 300px;
+  }
+  .main-menu.active .header {
+    padding: 0;
+  }
+  .main-menu.active .header .logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 10px;
+  }
+  .main-menu.active .header .logo img {
+    max-width: 85%;
+    max-height: 85%;
+    width: auto;
+  }
+  .main-menu.active .header .logo .mobile {
+    display: none;
+  }
+  .main-menu.active .header .logo .computer {
+    display: block;
+  }
+  .main-menu.active .menu-items .item {
+    position: relative;
+    padding: 17px 25px;
+  }
+  .main-menu.active .menu-items .item .text {
+    display: block;
+  }
+  .main-menu.active .footer .close-menu {
+    display: none;
+  }
+  .main-menu.active .footer .open-menu {
+    display: block;
   }
 }
 /*# sourceMappingURL=menu.css.map */
