--- a/src/components/LeftMenu/menu.scss
+++ b/src/components/LeftMenu/menu.scss
@@ -1,14 +1,15 @@
 .main-menu{
-    width: 300px;
+    flex-basis: 270px;
     flex-grow: 0;
     flex-shrink: 0;
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    position: fixed;
     flex-grow: 0;
     height: 100%;
     background-color: #fff;
+    z-index: 1;
+    box-shadow: 0 0 200px -20px rgba(57,55,73,.4);
 
     .header {
         background-color: #000;
@@ -22,6 +23,10 @@
             img {
                 max-width: 100%;
                 max-height: 100%;
+            }
+
+            .mobile{
+                display: none;
             }
 
         }
@@ -80,22 +85,44 @@
         }
 
     }
+
+    .footer {
+        background: #e4e9f0;
+        flex-basis: 60px;
+        overflow: hidden;
+        font-size: 22px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+
+        .close-menu{
+            display: none;
+        }
+    }
 }
 
-@media  (max-width:992px) {
 
-    .main-menu{
-        width: 75px;
+.main-menu{
+    &.active{
+        flex-basis: 75px;
 
         .header {
             padding: 0;
             .logo{
                 display: flex;
                 align-items: center;
-
+                justify-content: center;
+    
                 img{
                     max-width:75px;
-                    width: 75px;
+                    width: 45px;
+                }
+                .mobile{
+                    display: block;
+                }
+                .computer{
+                    display: none;
                 }
             }
             
@@ -103,9 +130,10 @@
         .menu-items {
             .item{
                 position: relative;
+                padding: 17px 25px;
                 .icon {
                     i{
-                        font-size: 17px;
+                        font-size: 13px;
                         &.arrow{
                             right: 3px;
                             position: absolute;
@@ -118,7 +146,113 @@
                 }
             } 
         }
-        
+        .footer{
+            .close-menu{
+                display: block;
+            }
+            .open-menu{
+                display: none;
+            }
+        }
+    }
+   
+}
+@media  (max-width:992px) {
+
+    .main-menu{
+        flex-basis: 75px;
+
+        .header {
+            padding: 0;
+            .logo{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                img{
+                    max-width:75px;
+                    width: 45px;
+                }
+                .mobile{
+                    display: block;
+                }
+                .computer{
+                    display: none;
+                }
+            }
+            
+        }
+        .menu-items {
+            .item{
+                position: relative;
+                padding: 17px 25px;
+                .icon {
+                    i{
+                        font-size: 17px;
+                        &.arrow{
+                            right: 3px;
+                            position: absolute;
+                            font-size: 12px;
+                        }
+                    }
+                }
+                .text{
+                    display: none;
+                }
+            } 
+        }
+        .footer{
+            .close-menu{
+                display: block;
+            }
+            .open-menu{
+                display: none;
+            }
+        }
+
+        &.active{
+            flex-basis: 300px;
+
+            .header {
+                padding: 0;
+                .logo{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    padding: 10px;
+                    img{
+                        max-width:85%;
+                        max-height: 85%;
+                        width: auto;
+                    }
+                    .mobile{
+                        display: none;
+                    }
+                    .computer{
+                        display: block;
+                    }
+                }
+                
+            }
+            .menu-items {
+                .item{
+                    position: relative;
+                    padding: 17px 25px;
+                  
+                    .text{
+                        display: block;
+                    }
+                } 
+            }
+            .footer{
+                .close-menu{
+                    display: none;
+                }
+                .open-menu{
+                    display: block;
+                }
+            }
+        }
     }
 
 }
